添加功能
1、添加参数域管理
2、添加参数管理
3、添加用户管理
